# PLOpenSource

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  test.cpp  test_saff.cpp
.github/workflows/: codeql-analysis.yml
game/: CMakeLists.txt  Save.cpp  Save.hpp  StateAwareFF.cpp  StateAwareFF.hpp  state_aware_file_format.txt
game/TitleScreen/: CMakeLists.txt  TitleScreen.cpp  TitleScreen.hpp
k4sdl/: Alignment.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  GameManager.cpp  GameManager.hpp  Renderable.cpp  Renderable.hpp  Screen.cpp  Screen.hpp  Vector2.cpp  Vector2.hpp  k4sdl.hpp
k4sdl/Vector2/: CMakeLists.txt  Vector2.cpp  Vector2.hpp  changes.txt
k4sdl/audio/: CMakeLists.txt  Sound.cpp  Sound.hpp  SoundLoader.cpp  SoundLoader.hpp  SoundManager.cpp  SoundManager.hpp
k4sdl/font/: CMakeLists.txt  Font.cpp  Font.hpp  FontLoader.cpp  FontLoader.hpp
k4sdl/input/: CMakeLists.txt  Input.cpp  Input.hpp
k4sdl/sprite/: CMakeLists.txt  Sprite.cpp  Sprite.hpp  SpriteLoader.cpp  SpriteLoader.hpp  Text.cpp  Text.hpp  sprite_file_format.txt
k4sdl/ui/: Button.cpp  Button.hpp  ButtonSprite.cpp  ButtonSprite.hpp  CMakeLists.txt
tools/: construct_spritesheet.py
tools/construct_state_aware_file/: construct_state_aware_file.py
tools/contruct_spritesheet/: construct_spritesheet.py
tools/contruct_spritesheet/pg_engine/sprite/: Sprite.py  SpriteLoader.py
tools/contruct_spritesheet/sprite/: Sprite.py
tools/sprite/: SpriteLoader.py
